<resources>
    <string name="app_name">news</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="publishedAt">Published At</string>
    <string name="author">Author</string>
    <string name="news_today">News Today</string>
    <string name="title_article">Title Article</string>
    <string name="published_at">Published At:</string>
    <string name="published">published</string>
    <string name="sub_author">Author:</string>
    <string name="content">Content</string>
    <string name="favorite">Favorite</string>
    <string name="title_dynamicfeature">Favorite</string>
    <string name="power_connected">connected</string>
    <string name="power_disconnected">disconnected</string>
    <string name="error">something went wrong</string>
</resources>