<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivArticle"
            android:layout_width="375dp"
            android:layout_height="213dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_article"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivArticle"
            tools:layout_editor_absoluteX="3dp" />

        <TextView
            android:id="@+id/sub_publishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_at"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textSize="16sp"
            android:layout_marginLeft="6dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toEndOf="@id/sub_publishedAt"/>

        <TextView
            android:id="@+id/sub_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_author"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/sub_publishedAt"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="16sp"
            android:layout_marginLeft="6dp"
            app:layout_constraintTop_toBottomOf="@id/tvPublishedAt"
            app:layout_constraintStart_toEndOf="@id/sub_author"/>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>